[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/gameplay.gd" id="1_game"]

[node name="Gameplay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_game")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.05, 0.05, 0.1, 1)

[node name="HUD" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TopBar" type="HBoxContainer" parent="HUD"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 50.0
grow_horizontal = 2

[node name="MarginLeft" type="Control" parent="HUD/TopBar"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="SongName" type="Label" parent="HUD/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Song Name"
vertical_alignment = 1

[node name="Score" type="Label" parent="HUD/TopBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="MarginRight" type="Control" parent="HUD/TopBar"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="ComboLabel" type="Label" parent="HUD"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 60.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 20
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
text = ""
horizontal_alignment = 1

[node name="LaneContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 100.0
offset_bottom = -100.0

[node name="Lanes" type="HBoxContainer" parent="LaneContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/separation = 4

[node name="HitLine" type="ColorRect" parent="LaneContainer"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -30.0
offset_bottom = -20.0
grow_horizontal = 2
color = Color(1, 1, 1, 0.8)

[node name="HitFeedback" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = 50.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 36
text = ""
horizontal_alignment = 1

[node name="BottomBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -80.0
grow_horizontal = 2
grow_vertical = 0

[node name="PauseButton" type="Button" parent="BottomBar"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Pause"

[node name="RestartButton" type="Button" parent="BottomBar"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Restart"

[node name="Spacer" type="Control" parent="BottomBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Progress" type="ProgressBar" parent="BottomBar"]
custom_minimum_size = Vector2(400, 30)
layout_mode = 2
size_flags_vertical = 1
mouse_filter = 0
mouse_default_cursor_shape = 2
value = 30.0
show_percentage = false

[node name="Spacer2" type="Control" parent="BottomBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SpeedLabel" type="Label" parent="BottomBar"]
layout_mode = 2
text = "1.0x"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SlowDownButton" type="Button" parent="BottomBar"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "-"

[node name="SpeedUpButton" type="Button" parent="BottomBar"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "+"

[node name="QuitButton" type="Button" parent="BottomBar"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Quit"

[node name="CountdownLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 72
text = "3"
horizontal_alignment = 1
vertical_alignment = 1
